Stick to JUnit 5.0.x for now, since Java 9 & Android don't flow yet